--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Stack Problems
-description: My Personal Stack Problems
-author: Agus Makmun
-github: https://github.com/agusmakmun
-about: I'm Programmer for Python & Django. I've made quite a few web apps, especially on Django.
-disqus_shortname: stackproblems
+title: Blog posts
+description: 
+author: Yi-Hsuan Tseng
+github: https://github.com/yrsheld
+about: ROBOT
+disqus_shortname: yrsheld
 google_analytics: UA-XXXXXXXX-Y
 
 enableTags: true
@@ -24,7 +24,7 @@ social:
     - icon: fa-stack-exchange
       link: "#"
     - icon: fa-github
-      link: "https://github.com/agusmakmun"
+      link: "https://github.com/yrsheld"
 
 share:
   twitter_username: github.io
@@ -38,7 +38,7 @@ urls:
     - text: XML Feed
       url: /feed.xml
 
-url: "https://agusmakmun.github.io"
+url: "https://yrsheld.github.io"
 baseurl: ""
 paginate: 20
 per_page: 20
