--- a/_data/projects.json
+++ b/_data/projects.json
@@ -1,38 +1,34 @@
 [
 	{
-		"slug": "cool-project",
-		"name": "Cool project 1",
-		"image": "placeholder.jpg",
-		"url": "https://www.google.com",
-		"date": "May 2023",
-		"tags": ["Angular JS", "API", "ROS"]
-	},
-	{
 		"slug": "driving-with-ros-control",
 		"name": "Driving with ros control",
-		"image": "ros-control-demo.jpg",
+		"image": "mybot.png",
 		"date": "May 2023",
-		"tags": ["ROS"]
+		"tags": ["ROS", "Gazebo"],
+		"url": "https://github.com/yrsheld/mybot"
 	},
 	{
-		"name": "Cool project 2",
-		"image": "placeholder.jpg",
-		"url": "#",
-		"date": "May 2014",
-		"tags": ["Python","Django"]
+		"slug": "gazebo-plugins",
+		"name": "Extend model with Gazebo plugins",
+		"image": "gazebo-plugins.jpg",
+		"date": "May 2023",
+		"tags": ["ROS", "Gazebo"],
+		"url": "https://github.com/yrsheld/mybot/tree/gazebo_sensors"
 	},
 	{
-		"name": "Cool project 3",
-		"image": "placeholder.jpg",
-		"url": "#",
-		"date": "June 2014",
-		"tags": ["HTML","JQuery","Django"]
+		"slug": "ball-tracking",
+		"name": "Track a red ball with RGB camera",
+		"image": "ball-tracking.png",
+		"date": "May 2023",
+		"tags": ["ROS","Gazebo","Computer Vision"],
+		"url": "https://github.com/yrsheld/Ball_tracking"
 	},
 	{
-		"name": "Cool project 4",
+		"name": "speed-limit-detect",
 		"image": "placeholder.jpg",
-		"date": "Oct 2016",
-		"tags": ["Python","nodejs"]
+		"date": "May 2023",
+		"tags": ["ROS","Gazebo","Computer Vision"],
+		"url": "https://github.com/yrsheld/Speed_limit_detect"
 	},
 	{
 		"name": "Cool project 5",
