--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,8 @@ paginate: 20
 per_page: 20
 paginate_path: "/page/:num/"
 markdown: kramdown
+kramdown:
+  math_engine: mathjax
 gems:
   - jekyll-paginate
   - jekyll-gist
